add css style for the sidebar

--- a/index.html
+++ b/index.html
@@ -2,8 +2,16 @@
 <html lang="en-US">
   <head>
     <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+    <title>Anthony DiFalco - Epicodus</title>
   </head>
   <body>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+    <h1>Anthony DiFalco</h1>
+    <div class="sidebar">
+      <h1>Github projects</h1>
+      <a href="https://github.com/Di-Falco/band-website"><h2>Band website</h2></a>
+      <p>25 May 2022 — Practice using html and css to create a mock website with multiple pages.</p>
+    </div>
+    <img src="img/0023.jpg" width="300px"><h2></h2>
+    <p></p>
   </body>
 </html>
