--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
     <title>Anthony DiFalco - Epicodus</title>
   </head>
   <body>
-    <h1>Anthony DiFalco</h1>
+    <span class="title"><h1>Anthony DiFalco</h1></span>
     <div class="sidebar">
       <h1>Github projects</h1>
       <a href="https://github.com/Di-Falco/band-website"><h2>Band website</h2></a>
       <p>25 May 2022 — Practice using html and css to create a mock website with multiple pages.</p>
     </div>
-    <img src="img/0023.jpg" width="300px"><h2></h2>
+    <div class="bodytext">
+      <p>After the Mexican Revolution, an avant-garde artistic movement originated in Mexico City: muralism. Many of the works of muralists José Clemente Orozco, David Alfaro Siqueiros and Diego Rivera are displayed in numerous buildings in the city, most notably at the National Palace and the Palacio de Bellas Artes. Frida Kahlo, wife of Rivera, with a strong nationalist expression, was also one of the most renowned of Mexican painters. Her house has become a museum that displays many of her works.</p>
+      <img src="img/0023.jpg" width="300px">
+    </div>
+    <h2></h2>
     <p></p>
   </body>
 </html>
