reformat sidebar to link to seperate HTML files for github and about me

--- a/index.html
+++ b/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en-US">
-  <head>
-    <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-    <title>Anthony DiFalco - Epicodus</title>
-  </head>
-  <body>
-    <span class="title"><h1>Anthony DiFalco</h1></span>
-    <div class="sidebar">
-      <h1>Github projects</h1>
-      <a href="https://github.com/Di-Falco/band-website"><h2>Band website</h2></a>
-      <p>25 May 2022 — Practice using html and css to create a mock website with multiple pages.</p>
-    </div>
-    <div class="bodytext">
-      <p>After the Mexican Revolution, an avant-garde artistic movement originated in Mexico City: muralism. Many of the works of muralists José Clemente Orozco, David Alfaro Siqueiros and Diego Rivera are displayed in numerous buildings in the city, most notably at the National Palace and the Palacio de Bellas Artes. Frida Kahlo, wife of Rivera, with a strong nationalist expression, was also one of the most renowned of Mexican painters. Her house has become a museum that displays many of her works.</p>
-      <img src="img/0023.jpg" width="300px">
-    </div>
-    <h2></h2>
-    <p></p>
-  </body>
+<head>
+  <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+  <title>Anthony DiFalco - Epicodus</title>
+</head>
+<body>
+  <span class="title"><h1>Anthony DiFalco</h1></span>
+
+  <div class="sidebar">
+    <a href="github.html" class="link"><h1>Github projects</h1></a>
+    <a href="about-me.html" class="link"><h1>About me</h1></a>
+  </div>
+
+  <div class="bodytext">
+    <img src="img/0023.jpg" width="250px">
+    <p>After the Mexican Revolution, an avant-garde artistic movement originated in Mexico City: muralism. Many of the works of muralists José Clemente Orozco, David Alfaro Siqueiros and Diego Rivera are displayed in numerous buildings in the city, most notably at the National Palace and the Palacio de Bellas Artes. Frida Kahlo, wife of Rivera, with a strong nationalist expression, was also one of the most renowned of Mexican painters. Her house has become a museum that displays many of her works.</p>
+  </div>
+</body>
 </html>
+
