reformat sidebar to link to seperate HTML files for photography and home

--- a/github.html
+++ b/github.html
@@ -2,14 +2,21 @@
 <html lang="en-US">
 <head>
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-  <title>Anthony DiFalco - Epicodus</title>
+  <title>Anthony DiFalco - Github Projects</title>
 </head>
 <body>
-  <a href="https://github.com/Di-Falco/code-review-1" class="link"><h2>First code review</h2></a>
-  <p>25 May 2022 — Github repository for this website.</p>
-  <a href="https://github.com/Di-Falco/band-website" class="link"><h2>Band website</h2></a>
-  <p>25 May 2022 — Practice using html and css to create a mock website with multiple pages.</p>
-  <a href="https://github.com/Di-Falco/resort-website" class="link"><h2>Resort website</h2></a>
-  <p>25 May 2022 — Practice using html and css to create a mock website with multiple pages.</p>
+  <span class="title"><h1>Github Projects</h1></span>
+
+  <div class="bodytext">
+    <h1>Week 1: Git, HTML, and CSS</h1>
+    <a href="https://github.com/Di-Falco/code-review-1" class="link"><h2>First code review</h2></a>
+    <p>27 May 2022 — Github repository for this website, my first ever code review at Epicodus</p>
+    <a href="https://github.com/Di-Falco/vacation-website" class="link"><h2>Vacation website</h2></a>
+    <p>26 May 2022 — Practice using html and bootstrap to create a mock website for tours of Mexico City. Co-authored by Caroline Cerussi.</p>
+    <a href="https://github.com/Di-Falco/band-website" class="link"><h2>Band website</h2></a>
+    <p>25 May 2022 — Practice using html and css to create a mock website for a band with multiple pages.</p>
+    <a href="https://github.com/Di-Falco/resort-website" class="link"><h2>Resort website</h2></a>
+    <p>24 May 2022 — Practice using html and css to create a mock website for a resort with multiple pages. Co-authored by Zhibin Liang.</p>
+  </div>
 </body>
 </html>
