--- a/index.html
+++ b/index.html
@@ -5,11 +5,13 @@
   <title>Anthony DiFalco - Epicodus</title>
 </head>
 <body>
-  <span class="title"><h1>Anthony DiFalco</h1></span>
+  <span class="title"><h1>— Anthony DiFalco —</h1></span>
 
   <div class="sidebar">
     <a href="github.html" class="link"><h1>Github projects</h1></a>
+    <a href="photography.html" class="link"><h1>Photography</h1></a>
     <a href="about-me.html" class="link"><h1>About me</h1></a>
+    <a href="index.html" class="link"><h1>Home</h1></a>
   </div>
 
   <div class="bodytext">
