--- a/photography.html
+++ b/photography.html
@@ -2,10 +2,10 @@
 <html lang="en-US">
 <head>
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
-  <title>Anthony DiFalco - About Me</title>
+  <title>Anthony DiFalco - Photography</title>
 </head>
 <body>
-  <span class="title"><h1>About Me</h1></span>
+  <span class="title"><h1>Photography by Me</h1></span>
 
   <div class="bodytext">
     
