add text to photography.html and include formatted images

--- a/photography.html
+++ b/photography.html
@@ -8,7 +8,28 @@
   <span class="title"><h1>Photography by Me</h1></span>
 
   <div class="bodytext">
-    
+    Since 2021 I've been Practicing photography. Most of my photos turn out poorly but it feels great when they don't. For anyone interested, I typically shoot color film on an Olympus OM-10, and I've taken some pretty cool photos with my Polaroid SX-70 as well. In the future I'd like to shoot more B&W, and maybe even start developing it myself. I also have some ideas in mind about shooting B&W infrared film, but I'm keeping those a secret for now. </p>
+    <p>Below are some of the results I feel are worth sharing.</p>
+  </div>
+  <div class="bodytext">
+    <h1>35mm Photos:</h1>
+    <img src="img/0018.JPG" height="400px">
+    <img src="img/0022.jpg" height="400px">
+    <img src="img/0023.jpg" height="400px">
+    <img src="img/71780033.jpg" height="400px">
+    <img src="img/71780035.jpg" height="400px">
+    <img src="img/IMG_8814.jpg" height="400px">
+    <img src="img/80570024.jpg" width="96%">
+  </div>
+
+  <div class="bodytext">
+    <h1>Polaroid Photos:</h1>
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
+    <img src="">
   </div>
 </body>
 </html>
