complete photography.html image formatting and include sidebar

--- a/photography.html
+++ b/photography.html
@@ -7,8 +7,16 @@
 <body>
   <span class="title"><h1>Photography by Me</h1></span>
 
+  <div class="sidebar">
+    <a href="github.html" class="link"><h1>Github projects</h1></a>
+    <a href="photography.html" class="link"><h1>Photography</h1></a>
+    <a href="about-me.html" class="link"><h1>About me</h1></a>
+    <a href="index.html" class="link"><h1>Home</h1></a>
+  </div>
+
   <div class="bodytext">
-    Since 2021 I've been Practicing photography. Most of my photos turn out poorly but it feels great when they don't. For anyone interested, I typically shoot color film on an Olympus OM-10, and I've taken some pretty cool photos with my Polaroid SX-70 as well. In the future I'd like to shoot more B&W, and maybe even start developing it myself. I also have some ideas in mind about shooting B&W infrared film, but I'm keeping those a secret for now. </p>
+    Since 2021 I've been Practicing photography. Most of my photos turn out poorly but it feels great when they don't. 
+    <p>For anyone interested, I typically shoot color film on an Olympus OM-10, and I've taken some pretty cool photos with my Polaroid SX-70 as well. In the future I'd like to shoot more B&W, and maybe even start developing it myself. I also have some ideas in mind about shooting B&W infrared film, but I'm keeping those a secret for now.</p>
     <p>Below are some of the results I feel are worth sharing.</p>
   </div>
   <div class="bodytext">
@@ -17,19 +25,29 @@
     <img src="img/0022.jpg" height="400px">
     <img src="img/0023.jpg" height="400px">
     <img src="img/71780033.jpg" height="400px">
-    <img src="img/71780035.jpg" height="400px">
+    <img src="img/IMG_8523.JPG" height="400px">
     <img src="img/IMG_8814.jpg" height="400px">
-    <img src="img/80570024.jpg" width="96%">
+    <img src="img/80570025.jpg" height="400px">
+    <img src="img/80570024.jpg" height="400px">
+    <img src="img/80570027.jpg" height="400px">
+    <img src="img/IMG_8825.jpg" height="400px">
+    <img src="img/IMG_8827.jpg" height="400px">
+    <img src="img/IMG_8836.jpg" height="400px">
   </div>
 
   <div class="bodytext">
     <h1>Polaroid Photos:</h1>
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
-    <img src="">
+    <img src="img/bend.JPG" width="280px">
+    <img src="img/washington_arch.JPG" width="280px">
+    <img src="img/fremont_bridge.JPG" width="280px">
+
+    <img src="img/hollywood_theatre.JPG" width="280px">
+    <img src="img/moon.JPG" width="280px">
+    <img src="img/montgomery_park.JPG" width="280px">
+
+    <img src="img/portland.JPG" width="280px">
+    <img src="img/sakura_trees.JPG" width="280px">
+    <img src="img/pittock.JPG" width="280px">
   </div>
 </body>
 </html>
