improve UI for readability

--- a/github.html
+++ b/github.html
@@ -7,10 +7,17 @@
 <body>
   <span class="title"><h1>Github Projects</h1></span>
 
+  <div class="sidebar">
+    <a href="github.html" class="link"><h1>Github projects</h1></a>
+    <a href="photography.html" class="link"><h1>Photography</h1></a>
+    <a href="about-me.html" class="link"><h1>About me</h1></a>
+    <a href="index.html" class="link"><h1>Home</h1></a>
+  </div>
+
   <div class="bodytext">
     <h1>Week 1: Git, HTML, and CSS</h1>
     <a href="https://github.com/Di-Falco/code-review-1" class="link"><h2>First code review</h2></a>
-    <p>27 May 2022 — Github repository for this website, my first ever code review at Epicodus</p>
+    <p>27 May 2022 — Github repository for my personal portfolio (the one you're viewing right now). My first ever code review at Epicodus</p>
     <a href="https://github.com/Di-Falco/vacation-website" class="link"><h2>Vacation website</h2></a>
     <p>26 May 2022 — Practice using html and bootstrap to create a mock website for tours of Mexico City. Co-authored by Caroline Cerussi.</p>
     <a href="https://github.com/Di-Falco/band-website" class="link"><h2>Band website</h2></a>
