--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
 
   <div class="bodytext">
     <img src="img/0023.jpg" width="250px">
-    <p>After the Mexican Revolution, an avant-garde artistic movement originated in Mexico City: muralism. Many of the works of muralists José Clemente Orozco, David Alfaro Siqueiros and Diego Rivera are displayed in numerous buildings in the city, most notably at the National Palace and the Palacio de Bellas Artes. Frida Kahlo, wife of Rivera, with a strong nationalist expression, was also one of the most renowned of Mexican painters. Her house has become a museum that displays many of her works.</p>
+    <p>Hello stranger, welcome to my portfolio webpage. This site is my first code review since starting at Epicodus. Included in the sidebar are pages for information about me, a gallery of some photos I've taken around Portland and Seattle, and a log of some of my assignments' Github repositories. In the future I am hoping to return to this project to improve its appearance and update each page as I learn more. I already feel that I've learned a lot and I am excited to learn more.</p>
+    <p>Thank you for visiting.</p>
   </div>
 </body>
 </html>
