--- a/about-me.html
+++ b/about-me.html
@@ -7,8 +7,15 @@
 <body>
   <span class="title"><h1>About Me</h1></span>
 
+  <div class="sidebar">
+    <a href="github.html" class="link"><h1>Github projects</h1></a>
+    <a href="photography.html" class="link"><h1>Photography</h1></a>
+    <a href="about-me.html" class="link"><h1>About me</h1></a>
+    <a href="index.html" class="link"><h1>Home</h1></a>
+  </div>
+
   <div class="bodytext">
-    
+    <p></p>
   </div>
 </body>
 </html>
