fill about-me.html with basic personal information

--- a/about-me.html
+++ b/about-me.html
@@ -15,7 +15,45 @@
   </div>
 
   <div class="bodytext">
-    <p></p>
+    <h1>Some Background</h1>
+    <p>My name is Anthony DiFalco, and I come from a long line of "Anthony"s. Although I was born in New York City, I grew up in all sorts of places around Portland. It was only in 2020 that I finally found myself settled within Portland city limits.</p>
+    <p>I first became interested in computer programming when I took a course on Java back in high school. Since then I've had some experience with C++ in computer science courses at PCC. Most of my job experience has been working long hours in warehouses where I alternate between inventory management and driving forklift. After some time off from college I decided that I could not wait to graduate to get out of my current field of work. With the experience I had and some discussion with friends I decided to enroll at Epicodus.</p>
+    <p>I am only writing this at the end of week 1, but already I feel very optimistic about this program. The five other classmates I've gotten to know are all incredibly helpful and friendly. I know it will not be easy, but I am feeling confident that I will gain a lot from this experience. I look forward to finding a career where I can do work I enjoy in a positive environment.</p>
+  </div>
+  <div class="bodytext">
+    <h1>Less Serious Information</h1>
+    <h2>Some hobbies:</h2>
+    <ul>
+      <li>Hiking</li>
+      <li>Photography</li>
+      <li>Watching old movies</li>
+      <li>Collecting obscure media</li>
+      <li>Travelling</li>
+    </ul>
+    <h2>My favorite movies:</h2>
+    <p>It's very difficult for me to choose specific rankings but I'll try my best</p>
+    <ol>
+      <li>Cinema Paradiso</li>
+      <li>Le Samourai</li>
+      <li>Ikiru</li>
+      <li>2001: A Space Odyssey</li>
+      <li>The Grand Budapest Hotel</li>
+      <li>Akira</li>
+      <li>Blade Runner</li>
+      <li>Butch Cassidy and the Sundance Kid</li>
+      <li>The Sting</li>
+      <li>Fear and Loathing in Las Vegas</li>
+    </ol>
+    <h2>Some bands I like:</h2>
+    <ul>
+      <li>King Crimson</li>
+      <li>Yes</li>
+      <li>Pink Floyd</li>
+      <li>Genesis</li>
+      <li>The Doors</li>
+      <li>and more...</li>
+    </ul>
+    
   </div>
 </body>
 </html>
