--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
   </div>
 
   <div class="bodytext">
-    <img src="img/anthony.jpg" alt="A dark photo of me" width="250px">
-    <p>Hello stranger, welcome to my portfolio webpage. This site is my first code review since starting at Epicodus. Included in the sidebar are pages for information about me, a gallery of some photos I've taken around Portland and Seattle, and a log of some of my assignments' Github repositories. In the future I am hoping to return to this project to improve its appearance and update each page as I learn more. I already feel that I've learned a lot and I am excited to learn more.</p>
+    <img src="img/anthony.jpg" alt="A poor photo of me showing off my cool Seattle Kraken jersey on a trip to Seattle" width="250px">
+    <p>Hello stranger, welcome to my portfolio webpage. This site is my first code review since starting at Epicodus. Included in the sidebar are pages for information about me, a gallery of some photos I've taken around Portland and Seattle, and a log of some of my assignments' Github repositories. In the future I am hoping to return to this project to improve its appearance and update each page to reflect my progress. I already feel that I've learned a lot and I am excited to learn more.</p>
     <p>I am working diligently to find a better photo than this →</p>
     <p>Thank you for visiting.</p>
   </div>
