add minor formatting improvements

--- a/photography.html
+++ b/photography.html
@@ -12,11 +12,12 @@
     <a href="photography.html" class="link"><h1>Photography</h1></a>
     <a href="about-me.html" class="link"><h1>About me</h1></a>
     <a href="index.html" class="link"><h1>Home</h1></a>
+    <img src="img/IMG_8823.jpg" alt="" width="88%">
   </div>
 
   <div class="bodytext">
-    Since 2021 I've been Practicing photography. Most of my photos turn out poorly but it feels great when they don't. 
-    <p>For anyone interested, I typically shoot color film on an Olympus OM-10, and I've taken some pretty cool photos with my Polaroid SX-70 as well. In the future I'd like to shoot more B&W, and maybe even start developing it myself. I also have some ideas in mind about shooting B&W infrared film, but I'm keeping those a secret for now.</p>
+    Since 2021 I've been practicing photography. Most of my photos turn out poorly but it feels great when they don't. 
+    <p>For anyone interested, I typically shoot <strong>color film</strong> on an <strong>Olympus OM-10</strong>, and I've taken some pretty cool photos with my <strong>Polaroid SX-70</strong> as well. In the future I'd like to shoot more B&W, and maybe even start developing it myself. I also have some ideas in mind about shooting B&W infrared film, <em>but I'm keeping those a secret for now.</em></p>
     <p>Below are some of the results I feel are worth sharing.</p>
   </div>
   
