--- a/about-me.html
+++ b/about-me.html
@@ -12,6 +12,7 @@
     <a href="photography.html" class="link"><h1>Photography</h1></a>
     <a href="about-me.html" class="link"><h1>About me</h1></a>
     <a href="index.html" class="link"><h1>Home</h1></a>
+    <img src="img/IMG_8823.jpg" alt="" width="88%">
   </div>
 
   <div class="bodytext">
