--- a/github.html
+++ b/github.html
@@ -12,18 +12,19 @@
     <a href="photography.html" class="link"><h1>Photography</h1></a>
     <a href="about-me.html" class="link"><h1>About me</h1></a>
     <a href="index.html" class="link"><h1>Home</h1></a>
+    <img src="img/IMG_8823.jpg" alt="" width="88%">
   </div>
 
   <div class="bodytext">
     <h1>Week 1: Git, HTML, and CSS</h1>
     <a href="https://github.com/Di-Falco/code-review-1" class="link"><h2>First code review</h2></a>
-    <p>27 May 2022 — Github repository for my personal portfolio (the one you're viewing right now). My first ever code review at Epicodus. Completed using HTML and CSS.</p>
+    <p><strong>27 May 2022 —</strong> Github repository for my personal portfolio (the one you're viewing right now). My first ever code review at Epicodus. Completed using HTML and CSS.</p>
     <a href="https://github.com/Di-Falco/vacation-website" class="link"><h2>Vacation website</h2></a>
-    <p>26 May 2022 — Mock website for booking tours of Mexico City, with multiple pages.  Completed using HTML and CSS. Co-authored by Caroline Cerussi.</p>
+    <p><strong>26 May 2022 —</strong> Mock website for booking tours of Mexico City, with multiple pages.  Completed using HTML and CSS. Co-authored by Caroline Cerussi.</p>
     <a href="https://github.com/Di-Falco/band-website" class="link"><h2>Band website</h2></a>
-    <p>25 May 2022 — Mock website for a band, with multiple pages. Completed using HTML and CSS.</p>
+    <p><strong>25 May 2022 —</strong> Mock website for a band, with multiple pages. Completed using HTML and CSS.</p>
     <a href="https://github.com/Di-Falco/resort-website" class="link"><h2>Resort website</h2></a>
-    <p>24 May 2022 — Mock website for a resort, with multiple pages. Completed using HTML and CSS. Co-authored by Zhibin Liang.</p>
+    <p><strong>24 May 2022 —</strong> Mock website for a resort, with multiple pages. Completed using HTML and CSS. Co-authored by Zhibin Liang.</p>
   </div>
 </body>
 </html>
