--- a/photography.html
+++ b/photography.html
@@ -13,7 +13,7 @@
     <a href="photography.html" class="link"><h1>Photography</h1></a>
     <a href="about-me.html" class="link"><h1>About me</h1></a>
     <a href="index.html" class="link"><h1>Home</h1></a>
-    <img src="img/IMG_8823.jpg" alt="" width="88%">
+    <img src="img/IMG_8823.jpg" alt="" width="100%">
   </div>
 
   <div class="bodytext">
@@ -24,38 +24,56 @@
   
   <div class="bodytext">
     <h1>35mm Photos:</h1>
-    <img src="img/0018.JPG" alt="Pittock Mansion" width="63%">
-    <img src="img/0022.jpg" alt="Portland's Chinatown gate" width="28%">
+    <div class="row justify-content-center">
+    <img src="img/0018.JPG" alt="Pittock Mansion" class="col-7 align-self-center">
+    <img src="img/0022.jpg" alt="Portland's Chinatown gate" class="col-4 align-self-center">
+    </div>
 
-    <img src="img/0023.jpg" alt="A building at OHSU with a flowering tree" width="27%">
-    <img src="img/71780033.jpg" alt="The Portland Max train with the Bancorp tower in the background" width="63%">
+    <div class="row justify-content-center">
+    <img src="img/0023.jpg" alt="A building at OHSU with a flowering tree" class="col-4 align-self-center">
+    <img src="img/71780033.jpg" alt="The Portland Max train with the Bancorp tower in the background" class="col-7 align-self-center">
+    </div>
 
-    <img src="img/IMG_8523.JPG" alt="Lan Su Chinese Garden" width="63%">
-    <img src="img/IMG_8814.jpg" alt="The Hollywood Theatre" width="27%">
+    <div class="row justify-content-center">
+    <img src="img/IMG_8523.JPG" alt="Lan Su Chinese Garden" class="col-7 align-self-center">
+    <img src="img/IMG_8814.jpg" alt="The Hollywood Theatre" class="col-4 align-self-center">
+    </div>
 
-    <img src="img/80570025.jpg" alt="The sunset looking east from Crown Point" width="63%">
-    <img src="img/80570024.jpg" alt="A far-off shot of Burnsude heading towards the Bancorp tower. Mt Tabor is seen in the background" width="28%">
+    <div class="row justify-content-center">
+    <img src="img/80570025.jpg" alt="The sunset looking east from Crown Point" class="col-7 align-self-center">
+    <img src="img/80570024.jpg" alt="A far-off shot of Burnsude heading towards the Bancorp tower. Mt Tabor is seen in the background" class="col-4 align-self-center">
+    </div>
 
-    <img src="img/80570027.jpg" alt="A lamp post against the columbia river during sunset" width="27%">
-    <img src="img/IMG_8825.jpg" alt="Pike Place market late in the day" width="63%">
+    <div class="row justify-content-center">
+    <img src="img/80570027.jpg" alt="A lamp post against the columbia river during sunset" class="col-4 align-self-center">
+    <img src="img/IMG_8825.jpg" alt="Pike Place market late in the day" class="col-7 align-self-center">
+    </div>
 
-    <img src="img/IMG_8827.jpg" alt="Part of the Seattle skyline viewed from Pike Place" width="63%">
-    <img src="img/IMG_8836.jpg" alt="A section of the Gum Wall beneath Pike Place" width="27%">
+    <div class="row justify-content-center">
+    <img src="img/IMG_8827.jpg" alt="Part of the Seattle skyline viewed from Pike Place" class="col-7 align-self-center">
+    <img src="img/IMG_8836.jpg" alt="A section of the Gum Wall beneath Pike Place" class="col-4 align-self-center">
+    </div>
   </div>
 
   <div class="bodytext">
     <h1>Polaroid Photos:</h1>
-    <img src="img/bend.JPG" alt="A Polaroid photo of a snowy river in bend" width="28%">
-    <img src="img/washington_arch.JPG" alt="A Polaroid photo of the arch in Washington Square Park, NYC" width="28%">
-    <img src="img/fremont_bridge.JPG" alt="A Polaroid photo of the Fremont Bridge on a clear day" width="28%">
+    <div class="row justify-content-center">
+    <img src="img/bend.JPG" alt="A Polaroid photo of a snowy river in bend" class="col-3 align-self-center">
+    <img src="img/washington_arch.JPG" alt="A Polaroid photo of the arch in Washington Square Park, NYC" class="col-3 align-self-center">
+    <img src="img/fremont_bridge.JPG" alt="A Polaroid photo of the Fremont Bridge on a clear day" class="col-3 align-self-center">
+    </div>
 
-    <img src="img/hollywood_theatre.JPG" alt="A black and white Polaroid photo of the Hollywood Theatre marquee" width="28%">
-    <img src="img/moon.JPG" alt="A Polaroid photo of the Moon" width="28%">
-    <img src="img/montgomery_park.JPG" alt="A Polaroid photo of the elevators inside the Montgomery Park building" width="28%">
+    <div class="row justify-content-center">
+    <img src="img/hollywood_theatre.JPG" alt="A black and white Polaroid photo of the Hollywood Theatre marquee" class="col-3 align-self-center">
+    <img src="img/moon.JPG" alt="A Polaroid photo of the Moon" class="col-3 align-self-center">
+    <img src="img/montgomery_park.JPG" alt="A Polaroid photo of the elevators inside the Montgomery Park building" class="col-3 align-self-center">
+    </div>
 
-    <img src="img/portland.JPG" alt="A Polaroid photo of a run down music venue in downtown Portland" width="28%">
-    <img src="img/sakura_trees.JPG" alt="A Polaroid photo of cherry blossoms blooming beneath the Steel Bridge" width="28%">
-    <img src="img/pittock.JPG" alt="A Polaroid photo of Pittock Mansion" width="28%">
+    <div class="row justify-content-center">
+    <img src="img/portland.JPG" alt="A Polaroid photo of a run down music venue in downtown Portland" class="col-3 align-self-center">
+    <img src="img/sakura_trees.JPG" alt="A Polaroid photo of cherry blossoms blooming beneath the Steel Bridge" class="col-3 align-self-center">
+    <img src="img/pittock.JPG" alt="A Polaroid photo of Pittock Mansion" class="col-3 align-self-center">
+    </div>
   </div>
 </body>
 </html>
