add div class for a footer box element on every page

--- a/github.html
+++ b/github.html
@@ -18,14 +18,22 @@
 
   <div class="bodytext">
     <h1>Week 1: Git, HTML, and CSS</h1>
+    
     <a href="https://github.com/Di-Falco/code-review-1" class="link"><h2>First code review</h2></a>
     <p><strong>27 May 2022 —</strong> Github repository for my personal portfolio (the one you're viewing right now). My first ever code review at Epicodus. Completed using HTML and CSS.</p>
+
     <a href="https://github.com/Di-Falco/vacation-website" class="link"><h2>Vacation website</h2></a>
     <p><strong>26 May 2022 —</strong> Mock website for booking tours of Mexico City, with multiple pages.  Completed using HTML and CSS. Co-authored by Caroline Cerussi.</p>
+
     <a href="https://github.com/Di-Falco/band-website" class="link"><h2>Band website</h2></a>
     <p><strong>25 May 2022 —</strong> Mock website for a band, with multiple pages. Completed using HTML and CSS.</p>
+
     <a href="https://github.com/Di-Falco/resort-website" class="link"><h2>Resort website</h2></a>
     <p><strong>24 May 2022 —</strong> Mock website for a resort, with multiple pages. Completed using HTML and CSS. Co-authored by Zhibin Liang.</p>
+  </div>
+
+  <div class="footer">
+    <p>Anthony DiFalco — Epicodus</p>
   </div>
 </body>
 </html>
