--- a/photography.html
+++ b/photography.html
@@ -17,7 +17,7 @@
   </div>
 
   <div class="bodytext">
-    Since 2021 I've been practicing photography. Most of my photos turn out poorly but it feels great when they don't. 
+    <p>Since 2021 I've been practicing photography. Most of my photos turn out poorly but it feels great when they don't.</p>
     <p>For anyone interested, I typically shoot <strong>color film</strong> on an <strong>Olympus OM-10</strong>, and I've taken some pretty cool photos with my <strong>Polaroid SX-70</strong> as well. In the future I'd like to shoot more B&W, and maybe even start developing it myself. I also have some ideas in mind about shooting B&W infrared film, <em>but I'm keeping those a secret for now.</em></p>
     <p>Below are some of the results I feel are worth sharing.</p>
   </div>
@@ -40,18 +40,18 @@
     </div>
 
     <div class="row justify-content-center">
-    <img src="img/80570025.jpg" alt="The sunset looking east from Crown Point" class="col-7 align-self-center">
     <img src="img/80570024.jpg" alt="A far-off shot of Burnsude heading towards the Bancorp tower. Mt Tabor is seen in the background" class="col-4 align-self-center">
+    <img src="img/80570025.jpg" alt="The sunset looking east from Crown Point" class="col-7 align-self-center">
     </div>
 
     <div class="row justify-content-center">
-    <img src="img/80570027.jpg" alt="A lamp post against the columbia river during sunset" class="col-4 align-self-center">
     <img src="img/IMG_8825.jpg" alt="Pike Place market late in the day" class="col-7 align-self-center">
+    <img src="img/80570027.jpg" alt="A lamp post against the columbia river during sunset" class="col-4 align-self-center">
     </div>
 
     <div class="row justify-content-center">
-    <img src="img/IMG_8827.jpg" alt="Part of the Seattle skyline viewed from Pike Place" class="col-7 align-self-center">
     <img src="img/IMG_8836.jpg" alt="A section of the Gum Wall beneath Pike Place" class="col-4 align-self-center">
+    <img src="img/IMG_8827.jpg" alt="Part of the Seattle skyline viewed from Pike Place" class="col-7 align-self-center">
     </div>
   </div>
 
@@ -74,6 +74,10 @@
     <img src="img/sakura_trees.JPG" alt="A Polaroid photo of cherry blossoms blooming beneath the Steel Bridge" class="col-3 align-self-center">
     <img src="img/pittock.JPG" alt="A Polaroid photo of Pittock Mansion" class="col-3 align-self-center">
     </div>
+  </div>
+
+  <div class="footer">
+    <p>Anthony DiFalco — Epicodus</p>
   </div>
 </body>
 </html>
