hide about-me.html biography paragraphs

--- a/about-me.html
+++ b/about-me.html
@@ -17,12 +17,14 @@
   </div>
 
   <div class="bodytext">
-    <h1>Some Background</h1>
+<!--    <h1>Some Background</h1>
     
     <p>My name is Anthony DiFalco, and I come from a long line of "Anthony"s. Although I was born in New York City, I grew up in all sorts of places around Portland. It was only in 2020 that I finally found myself settled within Portland city limits with my dog <a link href="img/scruffy.JPG" class="link">Scruffy.</a></p>
     <p>I first became interested in computer programming when I took a course on Java back in high school. Since then I've had some experience with C++ in computer science courses at PCC. Most of my job experience has been working long hours in warehouses where I alternate between inventory management and driving forklift. After some time off from college I decided that I could not wait to graduate to get out of my current field of work. From there I decided to enroll at Epicodus.</p>
     <p>I am only writing this at the end of week 1, but already I feel very optimistic about this program. The five other classmates I've gotten to know are all incredibly helpful and friendly. I know it will not be easy, but I am feeling confident that I will gain a lot from this experience. I look forward to finding a career where I can do work I enjoy in a positive environment.</p>
+-->  
   </div>
+
   
   <div class="bodytext">
     <h1>Less Serious Information</h1>
