remove empty text box from about-me.html

--- a/about-me.html
+++ b/about-me.html
@@ -15,9 +15,9 @@
     <a href="index.html" class="link"><h1>Home</h1></a>
     <img src="img/IMG_8823.jpg" alt="" width="100%">
   </div>
-
+<!--
   <div class="bodytext">
-<!--    <h1>Some Background</h1>
+    <h1>Some Background</h1>
     
     <p>My name is Anthony DiFalco, and I come from a long line of "Anthony"s. Although I was born in New York City, I grew up in all sorts of places around Portland. It was only in 2020 that I finally found myself settled within Portland city limits with my dog <a link href="img/scruffy.JPG" class="link">Scruffy.</a></p>
     <p>I first became interested in computer programming when I took a course on Java back in high school. Since then I've had some experience with C++ in computer science courses at PCC. Most of my job experience has been working long hours in warehouses where I alternate between inventory management and driving forklift. After some time off from college I decided that I could not wait to graduate to get out of my current field of work. From there I decided to enroll at Epicodus.</p>
