--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 <head>
   <link href="css/bootstrap.css" rel="stylesheet" type="text/css" media="all">
   <link href="css/styles.css" rel="stylesheet" type="text/css" media="all">
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
   <title>Anthony DiFalco - Epicodus</title>
 </head>
 <body>
@@ -14,8 +16,13 @@
     <a href="about-me.html" class="link"><h1>About me</h1></a>
     <a href="index.html" class="link"><h1>Home</h1></a>
     <img src="img/IMG_8823.jpg" alt="" width="100%">
+    <div id="theme">
+      <button class="btn link" id="themedark"><span class="clickable"><img src="img/icon-moon.png" width="80%"></span></button>
+    </div>
+    <div id="theme-hidden">
+      <button class="btn link" id="themelight"><span class="clickable"><img src="img/icon-sun.png" width="80%"></span></button>
+    </div>
   </div>
-
 
   <div class="bodytext">
     <img src="img/anthony.jpg" alt="A poor photo of me showing off my cool Seattle Kraken jersey on a trip to Seattle" width="20%" class="img-right">
