WIP: add light/dark theme functionality to each element in CSS

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <script src="js/scripts.js"></script>
   <title>Anthony DiFalco - Epicodus</title>
 </head>
-<body>
+<body class="dark-theme">
   <span class="title"><h1>— Anthony DiFalco —</h1></span>
 
   <div class="sidebar">
