update css elements for light and dark theme compatibility

--- a/index.html
+++ b/index.html
@@ -16,11 +16,13 @@
     <a href="about-me.html" class="link"><h1>About me</h1></a>
     <a href="index.html" class="link"><h1>Home</h1></a>
     <img src="img/IMG_8823.jpg" alt="" width="100%">
-    <div id="theme">
-      <button class="btn link" id="themedark"><span class="clickable"><img src="img/icon-moon.png" width="80%"></span></button>
-    </div>
-    <div id="theme-hidden">
-      <button class="btn link" id="themelight"><span class="clickable"><img src="img/icon-sun.png" width="80%"></span></button>
+    <div class="row justify-content-center">
+      <div id="theme">
+        <button class="btn" id="themedark"><span class="clickable footer link"><strong>Dark Theme</strong></span></button>
+      </div>
+      <div id="theme-hidden">
+        <button class="btn" id="themelight"><span class="clickable footer link"><strong>Light Theme</strong></span></button>
+      </div>
     </div>
   </div>
 
